--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1> </h1>
+    <img src="https://octodex.github.com/images/vinyltocat.png">
     Hello World! 
   </body>
 </html>
