--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <body>
     <h1> </h1>
     <img src="https://octodex.github.com/images/vinyltocat.png">
-    Hello World! 
+    Hello World!
+    <ul>
+      <li> Coding Sites: </li>
+        <ol> 
+          <li> GitHub </li>
+          <li> Stack Overflow </li>
+        </ol>
+    <\ul>
   </body>
 </html>
