--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <ul>
       <li> Coding Sites: </li>
         <ol> 
-          <li> GitHub </li>
-          <li> Stack Overflow </li>
+          <li> <a href = "https://github.com" > GitHub </a> </li>
+          <li> <a href = "https://stackoverflow.com" > Stack Overflow </a> </li>
         </ol>
     <\ul>
   </body>
