--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1> </h1>
+    <h1> Hello World! </h1>
     <img src="https://octodex.github.com/images/vinyltocat.png">
-    Hello World!
     <ul>
       <li> Coding Sites: </li>
         <ol> 
